--- a/package.json
+++ b/package.json
@@ -12,19 +12,21 @@
     "@react-native-community/masked-view": "^0.1.6",
     "axios": "^0.19.1",
     "expo": "~36.0.0",
+    "expo-linear-gradient": "~8.0.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-gesture-handler": "~1.5.0",
     "react-native-loading-spinner-overlay": "^1.0.1",
+    "react-native-paper": "^3.5.1",
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.0.10",
+    "react-navigation-material-bottom-tabs": "^2.1.5",
     "react-navigation-stack": "^2.0.15",
-    "react-navigation-tabs": "^2.7.0",
-    "expo-linear-gradient": "~8.0.0"
+    "react-navigation-tabs": "^2.7.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
