Added photo upload

--- a/app.json
+++ b/app.json
@@ -4,11 +4,7 @@
     "slug": "natour",
     "privacy": "public",
     "sdkVersion": "36.0.0",
-    "platforms": [
-      "ios",
-      "android",
-      "web"
-    ],
+    "platforms": ["ios", "android", "web"],
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -21,6 +17,7 @@
       "fallbackToCacheTimeout": 0
     },
     "assetBundlePatterns": [
+      "node_modules/@expo/vector-icons/src/vendor/react-native-vector-icons/Fonts/Feather.ttf",
       "**/*"
     ],
     "ios": {
