--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-navigation": "^4.0.10",
     "react-navigation-material-bottom-tabs": "^2.1.5",
     "react-navigation-stack": "^2.0.15",
-    "react-navigation-tabs": "^2.7.0"
+    "react-navigation-tabs": "^2.7.0",
+    "expo-image-picker": "~8.0.1"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
