--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@react-native-community/masked-view": "^0.1.6",
     "axios": "^0.19.1",
     "expo": "~36.0.0",
+    "expo-image-picker": "~8.0.1",
     "expo-linear-gradient": "~8.0.0",
+    "pagarme": "^4.5.3",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
@@ -25,8 +27,7 @@
     "react-navigation": "^4.0.10",
     "react-navigation-material-bottom-tabs": "^2.1.5",
     "react-navigation-stack": "^2.0.15",
-    "react-navigation-tabs": "^2.7.0",
-    "expo-image-picker": "~8.0.1"
+    "react-navigation-tabs": "^2.7.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
