--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-credit-card-input": "^0.4.1",
     "react-native-gesture-handler": "~1.5.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.1",
+    "react-native-keyboard-aware-scrollview": "^2.1.0",
+    "react-native-keyboard-spacer": "^0.4.1",
     "react-native-loading-spinner-overlay": "^1.0.1",
     "react-native-paper": "^3.5.1",
     "react-native-reanimated": "~1.4.0",
